# amyip.net

./: Cargo.toml  README.md  build.rs  package-lock.json  package.json  reload-tmux.sh
src/: links.rs  main.rs  ping.rs  reload.rs
svelte/: package-lock.json  package.json  rollup.config.js
svelte/public/: global.css  index.html
svelte/src/: App.svelte  Blog.svelte  Contact.svelte  Cv.svelte  Feet.svelte  Home.svelte  Nbar.svelte  Projects.svelte  Run.svelte  Shell.svelte  Welcome.svelte  main.ts  sleep.ts  stores.ts  tools.ts
svelte/wasm/: .gitignore  Cargo.toml
svelte/wasm/pkg/: package.json
svelte/wasm/rootfs/: README
svelte/wasm/rootfs/root/: README
svelte/wasm/src/: builtins.rs  common.rs  errors.rs  instant.rs  keys.rs  lib.rs  nanotools.rs  sysvars.rs  unix.rs
svelte/wasm/src/unix/: cat.rs  cd.rs  cp.rs  echo.rs  ln.rs  ls.rs  mkdir.rs  mod.rs  mv.rs  pwd.rs  rm.rs  rmdir.rs  touch.rs  uname.rs
svelte/wasm/src/vfs/: dummyfs.rs  futils.rs  infs.rs  mod.rs
utils/infs-stage/: buildstage.sh
utils/infs-stage/stage/: README
utils/infs-stage/stage/tmp/: README_PERSISTENT
utils/infsprogs/: .gitignore  Cargo.toml  README.md
utils/infsprogs/src/: common.rs  main.rs  sysvars.rs  vfs
