[package]
name = "amyip-net"
authors = ["Amy Parker <amy@amyip.net>"]
version = "0.1.0"
edition = "2021"
rust-version = "1.69.0"
description = "Sources for amyip.net"
readme = "README.md"
homepage = "https://amyip.net"
repository = "https://github.com/amyipdev/amyip.net"
license = "AGPL-3.0-or-later"
publish = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
fork = "0.1.23"
hex = "0.4.3"
hmac = "0.12.1"
rocket = { version = "0.5.0", features = ["json"] }
serde = "1.0.193"
sha2 = "0.10.8"
uname = "0.1.1"

[build-dependencies]
# rocket's relative! is absolutely amazing and we use it for now
# thankfully, as long as the versions stay the same, we're all good
# this requires care, though - don't want to double-compile
rocket = { version = "0.5.0", features = ["json"] }
colored = "2.0.4"
rustc_version = "0.4.0"

[features]
reload_github = []
