[package]
name = "infsprogs"
version = "0.1.2"
authors = ["Amy Parker <amy@amyip.net>"]
homepage = "https://amyip.net"
repository = "https://github.com/amyipdev/amyip.net"
license = "AGPL-3.0-or-later"
edition = "2021"
description = "Tools for working with the IrisOS-nano File System (INFS)"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.4.13", features = ["derive", "cargo"] }
const_format = "0.2.32"
either = "1.9.0"
once_cell = "1.19.0"
xterm-js-rs = "0.1.2"
